@@ -1,5 +1,7 @@
 package com.sentrysoftware.matrix.configuration;
 
+import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.DEFAULT_JOB_TIMEOUT;
+
 import com.sentrysoftware.matrix.alert.AlertInfo;
 import com.sentrysoftware.matrix.connector.model.common.DeviceKind;
 import com.sentrysoftware.matrix.connector.model.monitor.task.source.HttpSource;
@@ -10,20 +12,16 @@ import com.sentrysoftware.matrix.connector.model.monitor.task.source.SnmpTableSo
 import com.sentrysoftware.matrix.connector.model.monitor.task.source.Source;
 import com.sentrysoftware.matrix.connector.model.monitor.task.source.WbemSource;
 import com.sentrysoftware.matrix.connector.model.monitor.task.source.WmiSource;
-
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.Consumer;
 import java.util.stream.Collectors;
-
-import static com.sentrysoftware.matrix.common.helpers.MatrixConstants.DEFAULT_JOB_TIMEOUT;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
 
 @Data
 @Builder
@@ -34,30 +32,42 @@ public class HostConfiguration {
 	private String hostname;
 	private String hostId;
 	private DeviceKind hostType;
+
 	@Builder.Default
 	private long strategyTimeout = DEFAULT_JOB_TIMEOUT;
+
 	private Set<String> selectedConnectors;
 	private Set<String> excludedConnectors;
 	private boolean sequential;
 	private Consumer<AlertInfo> alertTrigger;
 	private long retryDelay;
 	private Map<String, String> connectorVariables;
+
 	@Builder.Default
 	private Map<Class<? extends IConfiguration>, IConfiguration> configurations = new HashMap<>();
+
 	private static final Map<Class<? extends IConfiguration>, Set<Class<? extends Source>>> CONFIGURATION_TO_SOURCES_MAP;
 
 	static {
-
-		CONFIGURATION_TO_SOURCES_MAP = Map.of(
-				SnmpConfiguration.class, Set.of(SnmpGetSource.class, SnmpTableSource.class),
-				WmiConfiguration.class, Collections.singleton(WmiSource.class),
-				WbemConfiguration.class, Collections.singleton(WbemSource.class),
-				SshConfiguration.class, Collections.singleton(OsCommandSource.class),
-				HttpConfiguration.class, Collections.singleton(HttpSource.class),
-				IpmiConfiguration.class, Collections.singleton(IpmiSource.class),
-				OsCommandConfiguration.class, Collections.singleton(OsCommandSource.class),
-				WinRmConfiguration.class, Collections.singleton(WmiSource.class));
-
+		CONFIGURATION_TO_SOURCES_MAP =
+			Map.of(
+				SnmpConfiguration.class,
+				Set.of(SnmpGetSource.class, SnmpTableSource.class),
+				WmiConfiguration.class,
+				Collections.singleton(WmiSource.class),
+				WbemConfiguration.class,
+				Collections.singleton(WbemSource.class),
+				SshConfiguration.class,
+				Collections.singleton(OsCommandSource.class),
+				HttpConfiguration.class,
+				Collections.singleton(HttpSource.class),
+				IpmiConfiguration.class,
+				Collections.singleton(IpmiSource.class),
+				OsCommandConfiguration.class,
+				Collections.singleton(OsCommandSource.class),
+				WinRmConfiguration.class,
+				Collections.singleton(WmiSource.class)
+			);
 	}
 
 	/**
@@ -67,16 +77,15 @@ public class HostConfiguration {
 	 * @return {@link Set} of accepted source types
 	 */
 	public Set<Class<? extends Source>> determineAcceptedSources(final boolean isLocalhost) {
-
 		// protocolConfigurations and host cannot never be null
 		final Set<Class<? extends IConfiguration>> protocolTypes = configurations.keySet();
 
 		final Set<Class<? extends Source>> sources = CONFIGURATION_TO_SOURCES_MAP
-				.entrySet()
-				.stream()
-				.filter(protocolEntry -> protocolTypes.contains(protocolEntry.getKey()))
-				.flatMap(v -> v.getValue().stream())
-				.collect(Collectors.toSet());
+			.entrySet()
+			.stream()
+			.filter(protocolEntry -> protocolTypes.contains(protocolEntry.getKey()))
+			.flatMap(v -> v.getValue().stream())
+			.collect(Collectors.toSet());
 
 		// Remove WMI for non-windows host
 		if (!DeviceKind.WINDOWS.equals(hostType)) {
@@ -93,8 +102,7 @@ public class HostConfiguration {
 		}
 
 		// Add IPMI through OSCommand remote (SSH)
-		if ((DeviceKind.LINUX.equals(hostType) || DeviceKind.SOLARIS.equals(hostType))
-				&& !isLocalhost) {
+		if ((DeviceKind.LINUX.equals(hostType) || DeviceKind.SOLARIS.equals(hostType)) && !isLocalhost) {
 			sources.add(IpmiSource.class);
 		}
 
